--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 .mainMenuBackground{
     background-image: url("https://i.pinimg.com/originals/52/fe/b6/52feb6ce0f78701667f41120b3cca0ea.jpg");
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-position: center center;
     background-size: cover;
     min-height: 100vh;
