--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,17 @@ a:hover {
 .card:hover{
     box-shadow: 2px 2px 8px black;
 }
+
+.card-img-top{
+    height: 150px;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.card-text{
+    height: 80px;
+}
+
 .incentiviBackground{
     background-image: url("https://i.pinimg.com/originals/52/fe/b6/52feb6ce0f78701667f41120b3cca0ea.jpg");
     background-repeat: no-repeat;
