--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6065,9 +6065,8 @@ textarea.form-control-lg {
     transition: none;
   }
 }
-.carousel-control-prev:hover, .carousel-control-prev:focus,
-.carousel-control-next:hover,
-.carousel-control-next:focus {
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
   color: #fff;
   text-decoration: none;
   outline: 0;
