--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,28 @@ a:hover {
         position: fixed;
     }
 }
+
+@media (min-width:992px){
+    .carousel-control-prev::before{
+        content: '';
+        position:absolute;
+        top:0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%,rgba(255, 255, 255, 0.473) 100%);
+    }
+
+    .carousel-control-next::before{
+        content: '';
+        position:absolute;
+        top:0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%,rgba(255, 255, 255, 0.473) 100%);
+    }
+}
 .photo{
     filter: brightness(0.5);
 }
@@ -104,3 +126,19 @@ a:hover {
     min-height: 100vh;
 }
 
+.carousel-item::before{
+    content: '';
+    position:absolute;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%,rgba(14, 14, 14, 0.767) 100%);
+}
+
+.carousel-indicators > button {
+    padding: 12px 0px;
+    height: 15px !important;
+    width: 15px !important;
+    border-radius: 50%;
+}
