--- a/news/news_style.css
+++ b/news/news_style.css
@@ -64,8 +64,9 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 1080px) {
     .modal-content-mio {
         width: 100%;
+        max-width:none;
     }
 }
