pagina preventivi migliorata

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     height: 100vh;
 }
 .prevSection{
-    background-image: url("https://images2.alphacoders.com/107/thumb-1920-1077266.jpg");
+    background-image: url("https://img.freepik.com/free-vector/green-curve-frame-template-vector_53876-144370.jpg?w=2000");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -138,7 +138,8 @@ a:hover {
 .mostra{
     min-height: 150px;
     min-width: 300px;
-    border: 2px solid rgb(214, 214, 214);
+    border-radius: 15px;
+    box-shadow: 2px 2px 8px rgb(28, 28, 28);
 }
 
 .carousel-item::before{
@@ -156,4 +157,13 @@ a:hover {
     height: 15px !important;
     width: 15px !important;
     border-radius: 50%;
+}
+#ric:hover{
+    color: rgb(28, 28, 28);
+    box-shadow: 2px 2px 4px rgb(28, 28, 28);
+}
+
+#cal{
+    color: rgb(28, 28, 28);
+    box-shadow: 2px 2px 4px rgb(28, 28, 28);
 }
