piccoli accorgimenti about us

--- a/about-us/style.css
+++ b/about-us/style.css
@@ -96,6 +96,6 @@
   
   .our-team .social li a:hover {
     color: #ffffff;
-    background-color: #f7f5ec;
+    background-color: #e7e7e7;
   }
   
