--- a/about-us/style.css
+++ b/about-us/style.css
@@ -4,6 +4,7 @@
     background-color: #f1f1f1;
     text-align: center;
     overflow: hidden;
+    border-radius: 1rem;
   }
   
   .our-team .picture {
@@ -55,7 +56,7 @@
   }
   
   .our-team:hover .picture img {
-    box-shadow: 0 0 0 14px #f7f5ec;
+    box-shadow: 0 0 0 14px #e9e9e9;
     transform: scale(0.7);
   }
   
