--- a/css/contattaci.css
+++ b/css/contattaci.css
@@ -4,7 +4,7 @@
     -moz-osx-font-smoothing: grayscale;
   }
   
-  body, button, input {
+  #contattaci, .button, .input {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     letter-spacing: 1.4px;
